--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-home></app-home>
+<div class="sidebar">
+    <a routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+    <a routerLink="/calendar" routerLinkActive="active">Calendar</a>
+    <a routerLink="/calculator" routerLinkActive="active">Calculator</a>
+    <a routerLink="/expenses" routerLinkActive="active">Expenses</a>
+    <a routerLink="/journal" routerLinkActive="active">Journal</a>
+</div>
+
+<router-outlet></router-outlet>
